// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fallback ambient constant bound 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback arithmetic bound 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 1 + 2) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback changing array-size bound 1`] = `
"local values = { 1, 2, 3, 4 }
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < #values) then
			break
		end
		values[#values] = nil
	end
end
return nil
"
`;

exports[`fallback computed constant bound 1`] = `
"local function getLimit()
	return 3
end
local limit = getLimit()
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback destructured constant bound 1`] = `
"local limit = 3
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback destructuring write to induction variable 1`] = `
"do
	local _i = 0
	local _shouldIncrement = false
	while true do
		local i = _i
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		i = 5
		_i = i
	end
end
return nil
"
`;

exports[`fallback different condition variable 1`] = `
"local condition = 2
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (condition < 3) then
			break
		end
		condition += 1
		print(i)
	end
end
return nil
"
`;

exports[`fallback different decrement target 1`] = `
"local remaining = 3
do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			remaining -= 1
		else
			_shouldIncrement = true
		end
		if not (i > 0) then
			break
		end
		if remaining == 1 then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback effectful bound with a literal return type 1`] = `
"local function limit()
	print("limit")
	return 2
end
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit()) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback fractional constant bound 1`] = `
"local limit = 2.5
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback fractional initializer 1`] = `
"do
	local i = 0.5
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback multiplicative step 1`] = `
"do
	local i = 1
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i *= 2
		else
			_shouldIncrement = true
		end
		if not (i < 4) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback mutable identifier bound 1`] = `
"local limit = 3
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < limit) then
			break
		end
		limit -= 1
	end
end
return nil
"
`;

exports[`fallback namespace constant bound 1`] = `
"local Resources = {}
do
	local _container = Resources
	local LIMIT = 3
	_container.LIMIT = LIMIT
end
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < Resources.LIMIT) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback negated identifier bound 1`] = `
"local limit = 3
do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (i > -limit) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback nonmutating unary incrementor 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			local _ = -i
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback parameter bound 1`] = `
"local function run(limit)
	if limit == nil then
		limit = 3
	end
	do
		local i = 0
		local _shouldIncrement = false
		while true do
			if _shouldIncrement then
				i += 1
			else
				_shouldIncrement = true
			end
			if not (i < limit) then
				break
			end
			limit -= 1
		end
	end
end
run()
return nil
"
`;

exports[`fallback tuple iterator assignment target 1`] = `
"local pair
local _iterator = iterator
while true do
	local _v = { _iterator() }
	if _v[1] == nil then
		break
	end
	pair = _v
	print(pair[2])
end
return nil
"
`;

exports[`fallback unsafe integer bound 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 9007199254740992) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`fallback wrong step direction 1`] = `
"do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (i < 0) then
			break
		end
		print(i)
	end
end
return nil
"
`;

exports[`fallback zero step 1`] = `
"do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 0
		else
			_shouldIncrement = true
		end
		if not (i < 1) then
			break
		end
		print(i)
		break
	end
end
return nil
"
`;

exports[`optimized ascending exclusive bound 1`] = `
{
  "optimized": "for i = 0, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized ascending inclusive bound with a step 1`] = `
{
  "optimized": "for i = 0, 4, 2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 2
		else
			_shouldIncrement = true
		end
		if not (i <= 4) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized constant identifier bound 1`] = `
{
  "optimized": "local MAX_SLOTS = 10
for slot = 0, MAX_SLOTS - 1 do
	print(slot)
end
return nil
",
  "unoptimized": "local MAX_SLOTS = 10
do
	local slot = 0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			slot += 1
		else
			_shouldIncrement = true
		end
		if not (slot < MAX_SLOTS) then
			break
		end
		print(slot)
	end
end
return nil
",
}
`;

exports[`optimized constant inclusive bounds 1`] = `
{
  "optimized": "local start = 1
local limit = 3
for i = start, limit do
	print(i)
end
return nil
",
  "unoptimized": "local start = 1
local limit = 3
do
	local i = start
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i <= limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized descending constant bounds 1`] = `
{
  "optimized": "local start = 3
local limit = -2
for i = start, limit + 1, -2 do
	print(i)
end
return nil
",
  "unoptimized": "local start = 3
local limit = -2
do
	local i = start
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 2
		else
			_shouldIncrement = true
		end
		if not (i > limit) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized descending exclusive bound 1`] = `
{
  "optimized": "for i = 3, 1, -1 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 3
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (i > 0) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized descending inclusive bound with a step 1`] = `
{
  "optimized": "for i = 4, 0, -2 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 4
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 2
		else
			_shouldIncrement = true
		end
		if not (i >= 0) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized literal spelling 1`] = `
{
  "optimized": "for i = 0x10, 19 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = 0x10
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i < 2_0) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized negative bounds 1`] = `
{
  "optimized": "for i = -1, -3, -1 do
	print(i)
end
return nil
",
  "unoptimized": "do
	local i = -1
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i -= 1
		else
			_shouldIncrement = true
		end
		if not (i >= -3) then
			break
		end
		print(i)
	end
end
return nil
",
}
`;

exports[`optimized negative zero initializer 1`] = `
{
  "optimized": "for i = -0, 0 do
	print(1 / i)
end
return nil
",
  "unoptimized": "do
	local i = -0
	local _shouldIncrement = false
	while true do
		if _shouldIncrement then
			i += 1
		else
			_shouldIncrement = true
		end
		if not (i <= 0) then
			break
		end
		print(1 / i)
	end
end
return nil
",
}
`;
